[package]
name = "openweather-async2"
version = "0.1.3"
authors = ["kilroy <tsbach@gmail.com>", "Rachel Shaw"]
edition = "2018"
license = "MIT"
description = "An async library for use with the openweathermap.org API"
repository = "https://github.com/obeijaflor/openweather-async"
readme = "README.md"

[dependencies]
tokio = { version="~1.31", features = ["macros"] }
reqwest = { version = "~0.11.18", default-features = false, features = ["json"] }
serde = { version="~1.0.183", features = ["derive"] }
serde_json = "~1.0.105"

[dev-dependencies]
dotenv = "0.15"

[features]
default = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
