[package]
name = "openweather-async2"
version = "0.1.0"
authors = ["Rachel Shaw"]
edition = "2018"
license = "MIT"
description = "Another async library for use with the openweathermap.org API"
repository = "https://github.com/obeijaflor/openweather-async"
readme = "README.md"

[dependencies]
tokio = { version="~1.31", features = ["macros"] }
reqwest = { version = "~0.11.18", features = ["json"] }
serde = { version="~1.0.183", features = ["derive"] }
serde_json = "~1.0.105"
